# umicom-studio-ide

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.txt  CLEANUP_PLAN.txt  CMakeLists.overlay.txt  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.txt  Makefile  README-Codestral.md  README.md  README_APPLY.md  README_REORG.md  README_USIDE_CLEAN.txt  _repo_tree.txt  build.gradle.kts  gradlew.bat  meson.build  meson.build.bak  mkdocs.yml  projects.json  settings.gradle.kts  umicom-studio-ide.sln
app/: proguard-rules.pro
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
docs/: BUILDING.md  CHANGELOG_PART31.md  CONTRIBUTING.md  DEV_GUIDE.md  DEV_SETUP.md  Design-Notes.md  (+27 more)
docs/examples/templates/android-ndk-hello/: CMakeLists.txt  README.md  native-lib.c
docs/examples/templates/wt/file-upload/: CMakeLists.txt  main.cpp
docs/examples/templates/wt/rest-json/: CMakeLists.txt  main.cpp
src/: ARCH_P17.c  BUILD_NOTES.c  DEV_NOTES.c  LICENSE.c  _unused_headers.txt  about.c  about.h  actions.c  actions.h  ansi_color.c  app.c  app.h  app_actions.c  app_actions.h  app_menu_llm.c  app_menu_llm.h  argv.c  argv.h  build_system.c  build_tasks.c  build_tasks.h  cli_entry.c  command_palette.c  console_logger.c  crash_guard.c  diagnostic_parsers.c  diagnostic_parsers.h  diagnostics_router.c  diagnostics_router.h  editor.c  editor.h  editor_actions.c  env.h  file_index.h  file_io.c  file_io.h  fs_walk.c  git_integration.c  git_integration.h  gtk_smoke.c  (+47 more)
src/core/: actions.c  diagnostics_router.c  json_store.c  json_store.h  options.c  problem_router.c  proj_templates.c  project_manager.c  project_manager.h  recent_files.c  run_config.c  run_pipeline.c  run_pipeline.h  session.c  settings_apply.c  settings_apply.h  settings_bus.c  telemetry.c  umi_log.c  umi_log.h  workspace.c
src/core/include/: actions.h  diagnostics_router.h  json_store.h  options.h  problem_router.h  proj_templates.h  project_manager.h  recent_files.h  run_config.h  run_pipeline.h  session.h  settings_apply.h  settings_bus.h  telemetry.h  theme.h  umi_log.h  workspace.h
src/editor/: editor.c  editor.h  editor_actions.c  editor_actions.h  keymap.c
src/editor/include/: editor.h  editor_actions.h  keymap.h
src/entry/: cli_entry.c  main.c
src/gui/: app.c  app_menu_llm.c  app_menu_llm.h  llm_lab.c  prefs.c  prefs.h
src/gui/app/: app.c  app.h  app_actions.c  window.c  window_chat_integration.c
src/gui/app/include/: app.h  app_actions.h  keymap.h  window_chat_integration.h
src/gui/chrome/: app_menu_llm.c  status_bar.c  toolbar.c
src/gui/chrome/include/: app_menu_llm.h  status_bar.h  toolbar.h
src/gui/dialogs/: about.c  open_folder.c
src/gui/dialogs/include/: about.h  open_folder.h
src/gui/llm_lab/: llm_lab.c
src/gui/llm_lab/include/: llm_lab.h
src/gui/menu/: app_menu_llm.c  command_palette.c  command_palette.h
src/gui/menu/include/: command_palette.h
src/gui/open/: open_folder.h
src/gui/prefs/: prefs.c  prefs_ui.c
src/gui/prefs/include/: prefs.h  prefs_ui.h
src/gui/theme/: palette.c  palette.h  theme.c  theme_live.c  theme_live.h
src/gui/theme/include/: palette.h  theme.h  theme_live.h
src/include/: gtk_all.h  runner.h  status.h  status_bar.h  task_runner.h  umi_diag_types.h  umi_diagnostics.h  umi_diagnostics_all.h  umi_log.h  umi_output_sink.h
src/include/editor/: editor.h
src/include/studio/: codestral.h
src/include/umicom/: app.h  build_queue.h  build_system.h  diagnostic_parsers.h  editor.h  i18n.h  json_store.h  llm.h  llm_http.h  prefs.h  privacy.h  recent_files.h  search_panel.h  trace.h
src/llm/: llm_core.c  llm_http.c  llm_privacy.c  privacy.c  studio_codestral_fim.c
src/llm/includes/: llm.h  privacy.h
src/llm/providers/: llm_zai.c
src/main/kotlin/: Main.kt
src/panes/: chat_pane.c  chat_pane.h
src/panes/chat/: chat_pane.c
src/panes/chat/include/: chat_pane.h
src/panes/output/: output_console.c  output_console.h  output_filters.c  output_pane.c  output_pane_adapter.c  output_pipeline.h
src/panes/output/include/: output_console.h  output_filters.h  output_pane.h  output_pane_adapter.h  output_pipeline.h
src/panes/problems/: problem_list.c
src/panes/problems/include/: problem_list.h
src/plugins/transpile/: i18n_translate.c  transpile.c
src/plugins/transpile/include/: i18n_translate.h  transpile.h
src/search/: rg_discovery.c  rg_runner.c  rg_runner.h  ripgrep_args.c  search_panel.c  search_panel.h
src/search/include/: rg_discovery.h  rg_runner.h  ripgrep_args.h  search_panel.h
src/ui/: icon.c  splash.c  window.c  window_chat_integration.c  window_chat_integration.h
src/ui/include/: icon.h  resource.h  splash.h
src/ui/resources/: ustudio.gresource.xml  ustudio_resources.c
src/ui/resources/includes/: ustudio_resources.h
src/ui/resources/styles/: app.css  theme_presets.json
src/ui/resources/ui/: main.ui
src/ui/resources/ui/partials/: chat_pane_snippet.xml  log_pane_snippet.xml
src/umicom/: llm_lab.h
src/util/: crash_guard.h  logging.c
src/util/fs/: file_index.c  file_io.c  file_tree.c  fs_walk.c  fs_walk.h  util_path.c
src/util/fs/include/: file_index.h  file_io.h  file_tree.h  fs_walk.h  util_path.h
src/util/git/: git_integration.c
src/util/git/include/: git_integration.h
src/util/log/: console_logger.c  console_logger.h  logging.c  logging.h  profiler.c  status_util.c
src/util/log/include/: console_logger.h  logging.h  profiler.h  status_util.h
src/util/platform/: win_launcher.c
src/util/platform/include/: win_launcher.h
src/util/sys/: ansi_color.c  argv.c  crash_guard.c  env.c  msys_env.c  timestamp.c  utf8.c  utf8.h
src/util/sys/include/: ansi_color.h  argv.h  crash_guard.h  env.h  msys_env.h  timestamp.h  utf8.h
src/util/watch/: path_watcher.h  watcher_integration.c
src/util/watchers/: path_watcher.c  watcher_integration.c  watcher_integration.h  watcher_recursive.c
src/util/watchers/include/: path_watcher.h  watcher_integration.h  watcher_recursive.h
src/util/win/: win_launcher.h
(+385 files in other folders)
